# OpenENVHackathon

./: Dockerfile  README.md  app_runtime.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: __init__.py  app.py
tasks/: __init__.py  registry.py
tests/: test_env.py
