[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codereview-env"
version = "1.0.0"
description = "OpenEnv environment for AI-driven code review and bug triage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "codereview-env" },
]
dependencies = [
  "fastapi==0.115.5",
  "openai>=2.7.2,<3",
  "openenv-core>=0.2.0",
  "pydantic==2.10.3",
  "pyyaml==6.0.2",
  "requests==2.32.3",
  "uvicorn[standard]==0.32.1",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
py-modules = ["env", "inference"]

[tool.setuptools.packages.find]
include = ["server*", "tasks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
